--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "homepage": "https://EduardMLT.github.io/service_auto_rental/",
   "dependencies": {
-    
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
