--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://EduardMLT.github.io/service_auto_rental/",
   "dependencies": {
     "axios": "^1.6.7",
+    "http-proxy-middleware": "^2.0.6",
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
