--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-size": "^2.3.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
